tests/typing/fail/float-cast-01.rs
use rust_sync::sync;

sync! {
    node oui() = (a)
    where
        a : float = false as float;
}

fn main() {}
