tests/typing/fail/float-cast-01.stderr
error: type mismatch: `bool` is not castable to float
 --> tests/typing/fail/float-cast-01.rs:6:21
  |
6 |         a : float = false as float;
  |                     ^^^^^^^^^^^^^^
